--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -24,8 +24,8 @@
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     text-shadow: 0px 2px 0px #000;
     
-    /* -webkit-box-shadow:inset 0 0px 0 #6e1212, 0 10px 0 #6e1212;
-    -moz-box-shadow:inset 0 0px 0 #6e1212, 0 10px 0 #6e1212; */
+    -webkit-box-shadow:inset 0 0px 0 #6e1212, 0 10px 0 #6e1212;
+    -moz-box-shadow:inset 0 0px 0 #6e1212, 0 10px 0 #6e1212;
     box-shadow:inset 0 0px 0 #6e1212, 0 10px 0 #6e1212;
     
     -webkit-border-radius: 5px;
@@ -37,8 +37,8 @@
     top:10px;
     background-color:#99191a;
 
-    /* -webkit-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
-    -moz-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212; */
+    -webkit-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
+    -moz-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
     box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
 }
 
@@ -52,16 +52,16 @@
         font-size: 10px;
         padding: 3px 8px;
 
-        /* -webkit-box-shadow:inset 0 0px 0 #6e1212, 0 5px 0 #6e1212;
-        -moz-box-shadow:inset 0 0px 0 #6e1212, 0 5px 0 #6e1212; */
+        -webkit-box-shadow:inset 0 0px 0 #6e1212, 0 5px 0 #6e1212;
+        -moz-box-shadow:inset 0 0px 0 #6e1212, 0 5px 0 #6e1212;
         box-shadow:inset 0 0px 0 #6e1212, 0 5px 0 #6e1212;
     }
 
     .button .btn-text:active{
         top:5px;
     
-        /* -webkit-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
-        -moz-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212; */
+        -webkit-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
+        -moz-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
         box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
 
     } 
@@ -76,16 +76,16 @@
     .surface-map .button .btn-text{
         font-size: 12px;
         padding: 3px 8px;
-        /* -webkit-box-shadow:inset 0 0px 0 #6e1212, 0 7px 0 #6e1212;
-        -moz-box-shadow:inset 0 0px 0 #6e1212, 0 7px 0 #6e1212; */
+        -webkit-box-shadow:inset 0 0px 0 #6e1212, 0 7px 0 #6e1212;
+        -moz-box-shadow:inset 0 0px 0 #6e1212, 0 7px 0 #6e1212;
         box-shadow:inset 0 0px 0 #6e1212, 0 7px 0 #6e1212;
     }
 
     .button .btn-text:active{
         top:7px;
     
-        /* -webkit-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
-        -moz-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212; */
+        -webkit-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
+        -moz-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
         box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
 
     } 
@@ -101,16 +101,16 @@
         font-size: 15px;
         padding: 7px 12px;
 
-        /* -webkit-box-shadow:inset 0 0px 0 #6e1212, 0 10px 0 #6e1212;
-        -moz-box-shadow:inset 0 0px 0 #6e1212, 0 10px 0 #6e1212; */
+        -webkit-box-shadow:inset 0 0px 0 #6e1212, 0 10px 0 #6e1212;
+        -moz-box-shadow:inset 0 0px 0 #6e1212, 0 10px 0 #6e1212;
         box-shadow:inset 0 0px 0 #6e1212, 0 10px 0 #6e1212;
     }
 
     .button .btn-text:active{
         top:10px;
     
-        /* -webkit-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
-        -moz-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212; */
+        -webkit-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
+        -moz-box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
         box-shadow:inset 0 1px 0 #6e1212, inset 0 -3px 0 #6e1212;
     } 
  }
