gave with to fusee image in alert box

--- a/src/css/components/alert-box.css
+++ b/src/css/components/alert-box.css
@@ -30,6 +30,10 @@
     border-top: 1px solid white; 
   }
 
+.fusee {
+    width: 40%;
+}
+
 .astronaut {
     margin-right: 60px;
     margin-left: 20px;
