--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
-
+/* 
 @import "../../node_modules/@fortawesome/fontawesome-free/css/fontawesome.css";
-@import "../../node_modules/@fortawesome/fontawesome-free/css/solid.css";
+@import "../../node_modules/@fortawesome/fontawesome-free/css/solid.css"; */
 
 @import "./components/button.css";
 @import "./components/iss-icon.css";
