--- a/src/css/components/map.css
+++ b/src/css/components/map.css
@@ -2,7 +2,7 @@
     position: absolute;
     height: 100vh;
     width: 100vw;
-    filter: blur(3px)
+    /* filter: blur(3px) */
 }
 
 .surface-map {
